make h@b town bigger; adjust booth positioning; fix scrollbar visibility

--- a/src/pages/DashboardPage/components/SponsorBooth/SponsorBooth.css
+++ b/src/pages/DashboardPage/components/SponsorBooth/SponsorBooth.css
@@ -4,6 +4,7 @@
 }
 
 .sponsorModal {
+  scrollbar-width: none;
   position: absolute;
   top: 50%;
   left: 50%;
